# ElementEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
ElementEngine/: CMakeLists.txt  main.cpp
ElementEngine/Assets/Shaders/: Color.slang  Shader.slang  Triangle.slang
ElementEngine/Private/: Application.cpp  Camera.cpp  Client.cpp  ColorShader.cpp  Engine.cpp  Input.cpp  Model.cpp  RenderContext.cpp  Renderer.cpp  ShaderSystem.cpp
ElementEngine/Private/Shader/Custom/: ColorShader.cpp
ElementEngine/Private/Shader/Format/: SlangShaderSystem.cpp
ElementEngine/Public/: Application.h  Camera.h  Client.h  ColorShader.h  Engine.h  Input.h  Model.h  RenderContext.h  Renderer.h  ShaderSystem.h
ElementEngine/Public/Shader/: Shader.h
ElementEngine/Public/Shader/Custom/: ColorShader.h
ElementEngine/Public/Shader/Format/: SlangShaderSystem.h
